--- a/src/comments/styles.css
+++ b/src/comments/styles.css
@@ -1,14 +1,17 @@
-form {
+.form_wrap {
   margin-top: 1em;
 }
-input[type="submit"] {
+.form_wrap input[type="submit"] {
   padding: 0.1em 0.5em;
 }
-input[type="text"] {
-  width: calc(100vw - 100px);
+.form_wrap input[type="text"] {
+  width: 50%;
   padding: 0.5em;
-  margin: 0 0.5em;
 }
+.form_wrap *:not(:last-child) {
+  margin-right: 1em;
+}
+
 
 .flex {
   display: flex;
@@ -18,9 +21,9 @@ input[type="text"] {
 }
 .scrollable::-webkit-scrollbar {
   display:none;
- }
+}
 
- .movie_wrap {
+.movie_wrap {
   position: relative;
   overflow: hidden;
   border: solid 2px black;
@@ -34,4 +37,22 @@ input[type="text"] {
   margin-left: 1em;
   width: 25vw;
   height: calc(100vh - 100px);
+}
+
+.comments_wrap li {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.comments_wrap button {
+  position: absolute;
+  right: 10px;
+  border: none;
+  background: none;
+  opacity: 0.5;
+}
+
+.comments_wrap button:hover {
+  opacity: 1;
+  text-shadow: 0px 0px 5px black;
 }
